--- a/Zalo-ChatBox/Presentation/Fragment/MessageInput/MessageInputView.xib
+++ b/Zalo-ChatBox/Presentation/Fragment/MessageInput/MessageInputView.xib
@@ -80,7 +80,7 @@
                                         <constraint firstAttribute="height" constant="30" id="Dyp-3e-9bY"/>
                                         <constraint firstAttribute="width" constant="30" id="xZc-kG-Mb2"/>
                                     </constraints>
-                                    <state key="normal" image="voiceBtn"/>
+                                    <state key="normal" image="emojiBtn"/>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -125,6 +125,7 @@
     </objects>
     <resources>
         <image name="cameraBtn" width="24" height="21"/>
+        <image name="emojiBtn" width="22" height="22"/>
         <image name="imageBtn" width="18" height="20"/>
         <image name="likeFilledBtn" width="22" height="20"/>
         <image name="plusBtn" width="24" height="24"/>
